--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -7,3 +7,9 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MariaDBDialect
+
+# JWT settings
+jwt.SECRET=C101
+jwt.EXPIRATION_TIME=600000
+jwt.TOKEN_PREFIX=Bearer 
+jwt.HEADER_STRING=Authorization
