feat: JWT + SECURITY + RESPONSE API

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -3,6 +3,7 @@ spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
 spring.datasource.url=jdbc:mariadb://localhost:3306/test
 spring.datasource.username=c101
 spring.datasource.password=ssafy1234
+
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.show-sql=true
@@ -10,6 +11,6 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MariaDBDialect
 
 # JWT settings
 jwt.SECRET=C101
-jwt.EXPIRATION_TIME=600000
+jwt.EXPIRATION_TIME=8640000
 jwt.TOKEN_PREFIX=Bearer 
 jwt.HEADER_STRING=Authorization
