--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -4,6 +4,7 @@ spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
 spring.datasource.url=jdbc:mariadb://localhost:3306/test
 spring.datasource.username=c101
 spring.datasource.password=ssafy1234
+spring.resources.static-locations=classpath:/static/,classpath:/public/
 
 # JPA settings
 spring.jpa.hibernate.ddl-auto=none
