fix: DB 초기화 에러 fix

--- a/backend/src/main/resources/application-prod.properties
+++ b/backend/src/main/resources/application-prod.properties
@@ -1,13 +1,13 @@
 # DB settings
 spring.application.name=teongbin
 spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
-spring.datasource.url=jdbc:mariadb://i11c101.p.ssafy.io:3310/testgit 
+spring.datasource.url=jdbc:mariadb://i11c101.p.ssafy.io:3310/prod
 spring.datasource.username=c101
 spring.datasource.password=ssafy1234
 spring.resources.static-locations=classpath:/static/
 
 # JPA settings
-spring.jpa.hibernate.ddl-auto=none
+spring.jpa.hibernate.ddl-auto=create
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MariaDBDialect
