--- a/backend/build.gradle
+++ b/backend/build.gradle
@@ -49,6 +49,14 @@ dependencies {
 	implementation 'com.auth0:java-jwt:3.4.1'
 }
 
+test {
+	if (project.hasProperty('prod')) {
+		systemProperty 'spring.profiles.active', 'prod'
+	} else {
+		systemProperty 'spring.profiles.active', 'default'
+	}
+}
+
 tasks.named('test') {
 	useJUnitPlatform()
 }
