--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -17,3 +17,6 @@ jwt.SECRET=C101
 jwt.EXPIRATION_TIME=8640000
 jwt.TOKEN_PREFIX=Bearer 
 jwt.HEADER_STRING=Authorization
+
+# DEBUG
+logging.level.org.apache.coyote.http11=DEBUG
