--- a/frontend/dashboard/package.json
+++ b/frontend/dashboard/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "axios": "^1.7.2",
     "bootstrap": "^5.3.3",
+    "bootstrap-icons": "^1.11.3",
     "lodash": "^4.17.21",
     "pinia": "^2.1.7",
     "vue": "^3.4.29",
