--- a/frontend/product-page/package.json
+++ b/frontend/product-page/package.json
@@ -9,6 +9,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "aos": "^3.0.0-beta.6",
+    "bootstrap": "^5.3.3",
     "vue": "^3.4.29",
     "vue-router": "^4.3.3"
   },
