--- a/backend/src/main/resources/application-prod.properties
+++ b/backend/src/main/resources/application-prod.properties
@@ -18,3 +18,7 @@ jwt.SECRET=C101
 jwt.EXPIRATION_TIME=8640000
 jwt.TOKEN_PREFIX=Bearer 
 jwt.HEADER_STRING=Authorization
+
+# Timezone
+spring.jackson.time-zone=Asia/Seoul
+spring.jpa.properties.hibernate.jdbc.time_zone=Asia/Seoul
