--- a/backend/build.gradle
+++ b/backend/build.gradle
@@ -47,6 +47,9 @@ dependencies {
 
 //	JWT
 	implementation 'com.auth0:java-jwt:3.4.1'
+
+	// 이메일 인증
+	implementation 'org.springframework.boot:spring-boot-starter-mail'
 }
 
 test {
