--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -22,3 +22,14 @@ jwt.HEADER_STRING=Authorization
 # Timezone
 spring.jackson.time-zone=Asia/Seoul
 spring.jpa.properties.hibernate.jdbc.time_zone=Asia/Seoul
+
+# ??? ??
+spring.mail.host=smtp.gmail.com
+spring.mail.port= 587
+spring.mail.username= c2824463@gmail.com
+spring.mail.password= koziyykynfominai
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.properties.mail.smtp.connectiontimeout=5000
+spring.mail.properties.mail.smtp.timeout=5000
+spring.mail.properties.mail.smtp.writetimeout=5000
