refactor: User Trashcan Log Reds Caching with Look aside + write around Strategy

--- a/backend/src/main/resources/application-prod.properties
+++ b/backend/src/main/resources/application-prod.properties
@@ -5,6 +5,9 @@ spring.datasource.url=jdbc:mariadb://i11c101.p.ssafy.io:3310/prod
 spring.datasource.username=c101
 spring.datasource.password=ssafy1234
 spring.resources.static-locations=classpath:/static/
+spring.data.redis.host=i11c101.p.ssafy.io
+spring.data.redis.port=6379
+spring.data.redis.password=1234
 
 # JPA settings
 spring.jpa.hibernate.ddl-auto=update
