--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -5,6 +5,9 @@ spring.datasource.url=jdbc:mariadb://localhost:3306/test
 spring.datasource.username=c101
 spring.datasource.password=ssafy1234
 spring.resources.static-locations=classpath:/static/
+spring.data.redis.host=localhost
+spring.data.redis.port=6379
+spring.data.redis.password=
 
 # JPA settings
 spring.jpa.hibernate.ddl-auto=update
