--- a/backend/build.gradle
+++ b/backend/build.gradle
@@ -34,11 +34,15 @@ dependencies {
 	compileOnly 'org.projectlombok:lombok'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
+	implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310'
 
 //	DB, JPA
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	runtimeOnly 'org.mariadb.jdbc:mariadb-java-client'
 	runtimeOnly 'com.h2database:h2'
+
+// Redis
+	implementation 'org.springframework.boot:spring-boot-starter-data-redis'
 
 //	Security
 	implementation 'org.springframework.boot:spring-boot-starter-security'
