--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -26,11 +26,11 @@ jwt.HEADER_STRING=Authorization
 spring.jackson.time-zone=Asia/Seoul
 spring.jpa.properties.hibernate.jdbc.time_zone=Asia/Seoul
 
-# ??? ??
+# EMAIL VERIFY
 spring.mail.host=smtp.gmail.com
 spring.mail.port= 587
-spring.mail.username= c2824463@gmail.com
-spring.mail.password= koziyykynfominai
+spring.mail.username= c42225959@gmail.com
+spring.mail.password=
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 spring.mail.properties.mail.smtp.connectiontimeout=5000
