--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -29,7 +29,7 @@ spring.jpa.properties.hibernate.jdbc.time_zone=Asia/Seoul
 # EMAIL VERIFY
 spring.mail.host=smtp.gmail.com
 spring.mail.port= 587
-spring.mail.username= c42225959@gmail.com
+spring.mail.username=
 spring.mail.password=
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
