--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -30,7 +30,7 @@ spring.jpa.properties.hibernate.jdbc.time_zone=Asia/Seoul
 spring.mail.host=smtp.gmail.com
 spring.mail.port= 587
 spring.mail.username= c42225959@gmail.com
-spring.mail.password=
+spring.mail.password= gjklcowrnjukozay
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 spring.mail.properties.mail.smtp.connectiontimeout=5000
