--- a/frontend/dashboard/package.json
+++ b/frontend/dashboard/package.json
@@ -15,7 +15,8 @@
     "lodash": "^4.17.21",
     "pinia": "^2.1.7",
     "vue": "^3.4.29",
-    "vue-router": "^4.3.3"
+    "vue-router": "^4.3.3",
+    "vue3-toastify": "^0.2.2"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.0.5",
