--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,8 +8,8 @@ services:
     container_name: teongbin
     ports:
       - "8080:8080"
-    environment:
-      - SPRING_PROFILES_ACTIVE=prod
+    env_file:
+      - .env.backend  # Spring Boot용 환경 파일
 
   dashboard:
     build:
@@ -18,6 +18,8 @@ services:
     container_name: dashboard
     ports:
       - "8083:80"
+    env_file:
+      - .env  # Vue.js + Vite용 환경 파일
 
   product_page:
     build:
